# TZ-Kinopoisk

./: .env  README.md  alembic.ini  main.py  pyproject.toml
api_v1/: __init__.py
app/authentication/: auth.py  fastapiusers.py  messages.py  models.py  transport.py  user_manager.py  users.py
app/authentication/dependencies/: __init__.py  access_tokens.py  backend.py  strategy.py  user_manager.py
app/users/: models.py  users.py
database/: base.py  db_helper.py
docker/: docker-compose.yaml
migrations/: env.py
migrations/versions/: 2024_11_06_1357-2367d5617934_craete_table_auth_users_users.py
settings/: config.py
utils/: __init__.py  case_converter.py
